@@ -1,3 +1,8 @@
+2013-05-13  Leo Liu  <sdl.web@gmail.com>
+
+	* progmodes/octave.el (octave-indent-comment): Fix the indentation
+	of ### or %%%.
+
 2013-05-12  Leo Liu  <sdl.web@gmail.com>
 
 	* progmodes/octave.el (inferior-octave-startup): Store the value
